# python-project-lvl2

./: Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml
gen_diff/: gendiff.py  parser.py
gen_diff/scripts/: gendiff.py
gendiff/: gendiff.py  parser.py
gendiff/scripts/: scenario.py
tests/: test_generate_diff.py  test_parser.py
tests/fixtures/: after.yml  before.yaml  json_diff.txt
