[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Oleg Kistanov <olegkistanov95@gmail.com>"]
packages = [
  { include = "gendiff" },
]


[tool.poetry.dependencies]
python = "^3.6"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.scenario:main"
